--- a/kinda-good-protocol/kinda-good-protocol.vcxproj
+++ b/kinda-good-protocol/kinda-good-protocol.vcxproj
@@ -113,8 +113,8 @@
     </QtRcc>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DependancyManager.cpp" />
     <ClCompile Include="KindaGoodProtocol.cpp" />
-    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Receiver.cpp" />
     <ClCompile Include="Transmitter.cpp" />
@@ -132,6 +132,7 @@
     <ResourceCompile Include="kinda-good-protocol.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DependancyManager.h" />
     <ClInclude Include="Io.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Receiver.h" />
