--- a/kinda-good-protocol/kinda-good-protocol.vcxproj.filters
+++ b/kinda-good-protocol/kinda-good-protocol.vcxproj.filters
@@ -11,7 +11,7 @@
     <ClCompile Include="Transmitter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Logger.cpp">
+    <ClCompile Include="DependancyManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -69,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Logger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DependancyManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
