--- a/kinda-good-protocol/kinda-good-protocol.vcxproj.filters
+++ b/kinda-good-protocol/kinda-good-protocol.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClCompile Include="DependancyManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileAdapter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Resource Files">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DependancyManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileAdapter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
