--- a/kinda-good-protocol/kinda-good-protocol.vcxproj
+++ b/kinda-good-protocol/kinda-good-protocol.vcxproj
@@ -113,7 +113,7 @@
     </QtRcc>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DependancyManager.cpp" />
+    <ClCompile Include="DependencyManager.cpp" />
     <ClCompile Include="IoEngine.cpp" />
     <ClCompile Include="KindaGoodProtocol.cpp" />
     <ClCompile Include="main.cpp" />
@@ -132,7 +132,7 @@
     <ResourceCompile Include="kinda-good-protocol.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DependancyManager.h" />
+    <ClInclude Include="DependencyManager.h" />
     <ClInclude Include="SlidingWindow.h" />
     <QtMoc Include="IoEngine.h">
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;$(QTDIR)\include\QtNetwork</IncludePath>
